# pkg-config-wrap

./: .gitignore  CMakeLists.txt  README.md  pkg-config.cpp
